fix out of stock text visibility on item card

--- a/src/scss/components/CartOverlay.scss
+++ b/src/scss/components/CartOverlay.scss
@@ -10,7 +10,7 @@
   overflow-y: hidden;
 
   .content {
-    z-index: 1200;
+    z-index: 12;
     display: grid;
     height: 100%;
     overflow: hidden;
