--- a/src/scss/components/ItemCard.scss
+++ b/src/scss/components/ItemCard.scss
@@ -9,7 +9,7 @@
     display: none;
   }
 
-  .image-overlay {
+  .img-overlay {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -17,7 +17,7 @@
     background-color: #80808034;
   }
 
-  .oos::before {
+  .img-overlay::before {
     content: "OUT OF STOCK";
     width: 100% !important;
     height: 100%;
